[package]
name = "sharedfileholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5.0", features = ["serde", "mmap"] }
clap = { version = "4.4.10", features = ["derive"] }
eyre = "0.6.9"
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
# thiserror = "1.0.50"
walkdir = "2.4.0"
