[package]
name = "sharedfileholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5.0", features = ["serde", "mmap"] }
clap = { version = "4.4.10", features = ["derive", "unstable-doc"] }
eyre = "0.6.9"
serde = { version = "1.0.193", features = ["derive", "rc"] }
walkdir = "2.4.0"
serde_json = "1.0"
strum = { version = "0.25.0", features = ["derive"] }

fieldmap = { path = "../fieldmap", features = ["serde"] }
derive_more = "0.99.17"
pathdiff = "0.2.1"
path-absolutize = "3.1.1"

[dev-dependencies]
mktemp = "0.5.1"

[lib]
name = "sharedfileholder"
path = "src/lib.rs"

[[bin]]
name = "backup"
path = "src/main.rs"
